# SR-Loom

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: sdk-feature-inventory.md  sr-non-primary-research.md  webxr-research.md
src/: AcerSpatialLabs.cpp  AcerSpatialLabs.h  Capture.cpp  Capture.h  CaptureDXGI.cpp  CaptureDXGI.h  Common.h  Converter.cpp  Converter.h  Detector.cpp  Detector.h  Gui.cpp  Gui.h  KatangaSource.cpp  KatangaSource.h  LFPReader.cpp  LFPReader.h  LFPRenderer.cpp  LFPRenderer.h  MediaProfiles.cpp  MediaProfiles.h  OpenTrackBridge.cpp  OpenTrackBridge.h  Profiles.cpp  Profiles.h  Renderer.cpp  Renderer.h  SRWeaver.cpp  SRWeaver.h  Settings.cpp  Settings.h  TrayIcon.cpp  TrayIcon.h  UpdateChecker.cpp  UpdateChecker.h  VideoSource.cpp  VideoSource.h  app.rc  main.cpp  resource.h
tools/: edge_aware_pushpull_attempt.patch  lfp_dump.cpp  lfp_extract.cpp  lfp_raw_stats.cpp  lfp_sbs.cpp  lfp_view.cpp  sira_offline.py  sira_shader_attempt.patch  williem_remap_attempt.patch
